ags (3.7.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved SF2 support to select nearest sample
	* improved SFZ support

ags (3.7.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed meson build

ags (3.7.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed libgsequencer gtk-doc

ags (3.7.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_fast_pitch_util.c to do loudness correction
	* minor improvements

ags (3.6.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed gui-scale factor applied to AgsNotationEdit, AgsAutomationEdit and AgsWaveEdit

ags (3.6.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing meson build files

ags (3.6.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing meson build files

ags (3.6.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing meson build files

ags (3.6.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing meson build files

ags (3.6.24)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing meson build files

ags (3.6.23)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved meson build

ags (3.6.22)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed upper of AgsNotationEditor's AgsRuler

ags (3.6.21)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed gui-scale factor applied to AgsNotationEdit
	* fixed gui-scale factor applied to AgsAutomationEdit
	* fixed gui-scale factor applied to AgsWaveEdit

ags (3.6.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing restore of pattern envelope

ags (3.6.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements

ags (3.6.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]