@@ -37,6 +37,7 @@
   <releases>
     <release version="3.7.3" date="2020-12-06">
       <description>
+	<p>Improved SF2 support to select nearest sample.</p>
 	<p>Improved SFZ support.</p>
       </description>
     </release>
